patch_realtek.c
@@ -35650,6 +35650,19 @@ c_func
 (paren
 l_int|0x1028
 comma
+l_int|0x05fe
+comma
+l_string|&quot;Dell XPS 15&quot;
+comma
+id|ALC668_FIXUP_DELL_XPS13
+)paren
+comma
+"&t;"
+id|SND_PCI_QUIRK
+c_func
+(paren
+l_int|0x1028
+comma
 l_int|0x060a
 comma
 l_string|&quot;Dell XPS 13&quot;
